--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>IPアドレスチェッカー</title>
 </head>
 <body>
     <main>
@@ -22,9 +22,10 @@
                 <p>IPv6</p>
                 <p class="ip" id="ipv6">取得中（　＾ω＾）・・・</p>
             </div>
+            <p>IPアドレスをクリックしてコピーできます。</p>
         </div>
         <div class="notify" id="notify-container">
-            <p id="notify">つうちつうち</p>
+            <p id="notify"></p>
         </div>
     </main>
     <script src="script.js"></script>
